--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,7 +5,7 @@ package:
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/i/ipfsspec/ipfsspec-{{ version }}.tar.gz
+  url: https://pypi.org/packages/source/i/ipfsspec/ipfsspec-{{ version }}.tar.gz
   sha256: d90999b149c9e476e0459d92a70162e563583cda24b3359da036624326d36da4
 
 build:
@@ -15,8 +15,9 @@ build:
 
 requirements:
   host:
-    - python >=3.8
+    - python 3.8
     - pip
+    - setuptools
   run:
     - python >=3.8
     - aiohttp
@@ -25,6 +26,7 @@ requirements:
 
 test:
   requires:
+    - python 3.8
     - pip
   commands:
     - pip check
